--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-react": "^6.2.0",
     "mocha": "^5.2.0",
+    "mochai": "^0.2.5",
     "nightmare": "^3.0.1",
     "react-addons-test-utils": "^15.6.0",
     "sinon": "^1.17.6",
